--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Gemini_Generated_Image_g1t2rtg1t2rtg1t2.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -29,13 +29,13 @@
     <!-- Open Graph meta tags for social media/search -->
     <meta property="og:title" content="Your App Name" />
     <meta property="og:description" content="Your app description" />
-    <meta property="og:image" content="%PUBLIC_URL%/Gemini_Generated_Image_g1t2rtg1t2rtg1t2.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.png" />
     <meta property="og:url" content="https://yourwebsite.com" />
     <meta property="og:type" content="website" />
     
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/Gemini_Generated_Image_g1t2rtg1t2rtg1t2.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/favicon.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
